CSS fix for stream body horizontal scrolling, fix for console errors on profile page, fix for live error with source mapping

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html, body {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
